@@ -21,7 +21,6 @@ import org.apache.jena.sparql.core.DatasetGraph;
 import org.apache.jena.sparql.core.Quad;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -33,6 +32,7 @@ public class StateRelationshipsFetcher
     /**
      * Creates a new fetcher that finds the relationships involving states
      */
+    @SuppressWarnings("java:S1186")
     public StateRelationshipsFetcher() {
 
     }
@@ -44,7 +44,7 @@ public class StateRelationshipsFetcher
                                                              new TelicentGraphNode(
                                                                      source.getStateNode().equals(q.getSubject()) ?
                                                                      q.getObject() : q.getSubject(), dsg.prefixes())))
-                    .collect(Collectors.toList());
+                    .toList();
     }
 
 }
